style: correct margin for Phantasia2 layout to enhance visual alignment
- Adjusted the margin in the SCSS for Phantasia2 to improve the layout's visual consistency.
- This change ensures better alignment of elements, contributing to an overall enhanced user experience.

These modifications build upon previous layout adjustments, further refining the aesthetics of the Phantasia2 component.

--- a/src/app/pages/collections/phantasia/pages/phantasia2/phantasia2.scss
+++ b/src/app/pages/collections/phantasia/pages/phantasia2/phantasia2.scss
@@ -356,7 +356,7 @@ $dark-to-black: linear-gradient(135deg, #343a40, #212529, #000000);
   align-items: center;
   justify-content: center;
   padding: 0.5rem 0;
-  margin: -5vh 0 0 0;
+  margin: 5vh 0 0 0;
   z-index: 10;
 
   .scroll-indicator-container {
